<resources>
    <string name="app_name">AgelessGrace</string>
    <string name="action_settings">Settings</string>
    <string name="description_title">Description</string>
    <string name="tools_title">Tools</string>
    <string name="title_activity_music_selector">MusicSelectorActivity</string>
    <string name="action_next">Next</string>
    <string name="tools_tab">Tools</string>
    <string name="settings_tab">Settings</string>
    <string name="about_tab">About AG</string>
    <string name="about_header">Ageless Grace\u00AE in a Nutshell</string>
    <string name="about_who_subheader">WHO</string>
    <string name="about_what_subheader">WHAT</string>
    <string name="about_why_subheader">WHY</string>
    <string name="about_where_subheader">WHERE</string>
    <string name="about_how_subheader">HOW</string>
    <string name="action_refresh_view">Refresh</string>
    <string name="action_accept">Accept</string>
    <string name="select_music_title">Select Music</string>
    <string name="action_select">Auto Select</string>
    <string name="action_reselect">Reselect</string>
    <string name="action_commit">Commit</string>
    <string name="action_continue">Continue</string>
    <string name="action_save_settings">Save Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_repeat">Repeat</string>
    <string name="body_parts_to_move_title">Body Parts to Move</string>
    <string name="ways_to_move_them_title">Ways to Move Them</string>
    <string name="select_the_tools">Select Exercise Sessions</string>
    <string name="alert_title">Alert!</string>
    <string name="alert_select">Touch \'OK\' to randomly select 7 days worth of 10 minute sessions.</string>
    <string name="alert_select_more">Touch \'More\' to randomly select the remaining %d more days, or \'All\' to randomly select all 7 days, of 10 minute sessions..</string>
    <string name="ok">OK</string>
    <string name="all">All</string>
    <string name="more">More</string>
    <string name="exercise_title">Exercise %d</string>
    <string name="first_day_title">First Day</string>
    <string name="second_day_title">Second Day</string>
    <string name="third_day_title">Third Day</string>
    <string name="fourth_day_title">Fourth Day</string>
    <string name="fifth_day_title">Fifth Day</string>
    <string name="sixth_day_title">Sixth Day</string>
    <string name="seventh_day_title">Seventh Day</string>
    <string name="seventh_exercise">Exercise 7</string>
    <string name="no_music_available">No music is currently available!</string>
    <string name="no_music_available_continuing_anyway">No music exists on this emulator - continuing on as if the exercise has been completed</string>
    <string name="no_music_available_on_emulator">No music exists on this emulator - continuing on as if the exercise has been completed</string>
    <string name="no_music_available_on_this_device_continuing_anyway">No music exists on this device - exercise will take place with no music</string>
    <string name="formatted_tool_title">Tool #%d: %s</string>
    <string name="exercise_screen_title">Time To Exercise</string>
    <string name="alert_done_header">You\'re done!</string>
    <string name="alert_exercise_done">Your exercise requirement for today is complete. You should continue tomorrow!</string>
    <string name="congrats">Well Done!</string>
    <string name="congrats_ten_minute_completion">Congratulations on doing your 10 minutes of Ageless Grace Brain. See you %s!</string>
    <string name="congrats_seven_day_completion"> Wow! You have done your Ageless Grace Brain Health tools every day for a week now!</string>
    <string name="congrats_twenty_one_days_completed"> You are a champion! Your brain is getting stronger every day -- you did your Ageless Grace tools for 21 days in a row!</string>
    <string name="frequency">Frequency</string>
    <string name="howAndWhenInstruction">Select when and how you will exercise after you have started</string>
    <string name="intermittently">intermittently</string>
    <string name="daily">daily</string>
    <string name="pause">Pause?</string>
    <string name="pauseInstruction">Pause between tool exercises</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="start_exercise_session">Start exercise session immediately\nwhen view appears</string>
    <string name="button_press">upon button press</string>
    <string name="automatically">automatically</string>
    <string name="restart_title">Restart The Music</string>
    <string name="restart_the_music">Restart the music at completion,\nif there are more than 15 seconds\nrequired to complete the exercise</string>
    <string name="scrolling_content">           %s          Body Parts: - %s            Ways To Move: - %s></string>
    <string name="select_starting_date">Select Starting Date</string>
    <string-array name="tools">
        <item>Juicy Joints</item>
        <item>Dive In!</item>
        <item>Spelling "B" (for Body)</item>
        <item>Front Row Orchestra</item>
        <item>Zoo-ology</item>
        <item>Try Chi</item>
        <item>Yo Baby!</item>
        <item>Body Math</item>
        <item>Gentle Geometry</item>
        <item>Rockin\' Rockettes</item>
        <item>Spaghetti Spine</item>
        <item>Express Yourself!</item>
        <item>"Power" Tools</item>
        <item>Saving Face</item>
        <item>Balancing Act</item>
        <item>B-R-E-A-T-H-E Out Loud</item>
        <item>Grab Bag</item>
        <item>Shake It Up Baby!</item>
        <item>Team Fit</item>
        <item>Get Down, Get Up!</item>
        <item>Dance Party!</item>
    </string-array>
    <string-array name="primary_benefits">
        <item>Joint Mobility.
Also Ligament Flexibility, Circulation</item>
        <item>Upper Body Strength.
Also Upper/Lower Body, Psoas, Right/Left Brain Coordination, Hip Flexors</item>
        <item>All five areas of the brain.
Also Cognitive Function, Kinesthetic Learning, Range of Motion</item>
        <item>Multi-skilling.
Also Spinal Flexibility, Right-Left Brain Coordination, Eye-Hand Coordination</item>
        <item>Systemic Movement.
Also Breathing, Fall Prevention, Cognitive Function (Memory/Imagination), Humor</item>
        <item>Stability in the Ligaments/Joints.
Also Muscle Control, Eye-Hand Coordination, Breathing and Relaxation</item>
        <item>Flexibility.
Also Alignment, Joint Stability, Bone Density</item>
        <item>Ability to Respond, React and Recover. (The Three R\'s)
Also Cognitive Function, Agility, Neural Response</item>
        <item>Neuroplasticity.
Also Coordination, Neural Response, Multi-skilling, Sense of Humor</item>
        <item>Hip Flexors and lower body function.
Also Thigh Strength, Hip Mobility, Ankle and Foot Flexibility, Arch Support, Foot Health</item>
        <item>Spinal Flexibility: all 26 working parts of the spine.
(7 Cervical vertebrae, 12 thoracic, 5 lumbar, sacrum and coccyx)</item>
        <item>Mobility, Strength and Agility in Entire Arm.
(the Hands, Fingers, Arms, Shoulders, back and chest muscles)</item>
        <item>Power and Leverage.
Also Integration, Imagination, Memory/ Recall, Coordination</item>
        <item>Release of Tension in the Face, Head and Neck.
Also Relaxation, Muscle Toning, Headache Relief, TMJ/ Jaw Tension, Sense of Humor</item>
        <item>Balance and Fall Prevention.
Inner Ear Fluid Stimulation, Neural Pathway Development, Bone Density, Ankle Strength</item>
        <item>Oxygenation of Cells. (bloodstream, muscles, brain).
Also Sense of Humor, Stress Relief, Personal Power</item>
        <item>Dexterity in the Hands, Fingers and Wrists. (ADLs)
Also Muscle Strength, Arthritis, Joint Flexibility/Mobility, Eye-Hand Coordination</item>
        <item>Myofascia/Connective Tissue.
Nervous System Stimulation, Skin and Connective Tissue Health, Agility</item>
        <item>Muscle Mass and Coordination.
Overall Physical Strength, Eye-Hand Coordination, Memory/Recall/Strategic Planning</item>
        <item>The Muscle of the Heart/Cardio Conditioning.
Also Muscle Strength, Spinal Health and Flexibility, Bone Density, Fall Prevention</item>
        <item>Emotional Expression,
Memory/Recall, Cardiovascular Conditioning, Overall Functionality.</item>
    </string-array>
</resources>