<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/product_logo_small" />

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_done_header"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/alertMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_exercise_done"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center" />


</LinearLayout>