<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordered_text_view"
                android:maxLines="3"
                android:minLines="2"
                android:text="@string/howAndWhenInstruction"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/exercise_frequency_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/frequency"
                    android:textColorLink="@color/AG_red"
                    android:textOff="@string/intermittently"
                    android:textOn="@string/daily"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/freq_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/daily"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_frequency_sw" />

            </LinearLayout>

            <TextView
                android:id="@+id/startingDateTitle"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginTop="8dp"
                android:height="16dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:text="@string/select_starting_date"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:typeface="normal" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="9dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:headerBackground="@drawable/view_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/freq_result"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordered_text_view"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/pauseInstruction"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/pause_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/pauseInstruction"
                    android:textColorLink="@color/AG_red"
                    android:textOff="@string/intermittently"
                    android:textOn="@string/daily"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/pause_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/yes"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pause_sw" />
            </LinearLayout>

            <TextView
                android:id="@+id/title12"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordered_text_view"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/start_exercise_session"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/exercise_start_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/start_exercise_session"
                    android:textColorLink="@color/AG_red"
                    android:textOff="@string/automatically"
                    android:textOn="@string/button_press"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/exercise_start_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/yes"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pause_sw" />

            </LinearLayout>

            <TextView
                android:id="@+id/restart_title"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bordered_text_view"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/restart_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/restart_sw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:checked="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:maxLines="5"
                    android:minLines="3"
                    android:text="@string/restart_the_music"
                    android:textColorLink="@color/AG_red"
                    android:textOff="@string/automatically"
                    android:textOn="@string/button_press"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/restart_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/yes"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restart_sw" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- text to be displayed whenever current state is checked-->

</RelativeLayout>